build: 添加openai依赖和dev依赖组
添加openai<2.0.0作为项目依赖，并创建dev依赖组包含black>=26.1.0

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,15 @@ authors = [
     { name = "linhx", email = "linhx1999@163.com" }
 ]
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "openai<2.0.0",
+]
 
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[dependency-groups]
+dev = [
+    "black>=26.1.0",
+]
