--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,5 +17,7 @@ build-backend = "hatchling.build"
 
 [dependency-groups]
 dev = [
-    "black>=26.1.0",
+    "black~=23.12.0",
+    "pytest~=7.4.0",
+    "pytest-mock~=3.10.0",
 ]
