build: 添加腾讯云PyPI镜像源

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,3 +25,7 @@ dev = [
 example = [
     "python-dotenv~=1.0.0",
 ]
+
+[[tool.uv.index]]
+name = "tencent"
+url = "https://mirrors.cloud.tencent.com/pypi/simple/"
