build: 添加vllm和transformers依赖并创建模型部署脚本
添加vllm和transformers作为模型相关依赖
创建deploy_models.sh脚本用于启动vllm服务

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,10 @@ dev = [
 example = [
     "python-dotenv~=1.0.0",
 ]
+model = [
+    "vllm~=0.8.0",
+    "transformers~=4.52.0"
+]
 
 [[tool.uv.index]]
 name = "tencent"
