build: 更新 Python 版本要求并调整依赖项
将 requires-python 从 ">=3.12" 改为 "~=3.12" 以更精确控制版本
移除 model 可选依赖项和 uv 索引配置

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ readme = "README.md"
 authors = [
     { name = "linhx", email = "linhx1999@163.com" }
 ]
-requires-python = ">=3.12"
+requires-python = "~=3.12"
 dependencies = [
     "openai<2.0.0",
     "tavily~=1.1.0",
@@ -22,14 +22,8 @@ dev = [
     "pytest~=7.4.0",
     "pytest-mock~=3.14.0",
 ]
+
+[project.optional-dependencies]
 example = [
     "python-dotenv~=1.0.0",
 ]
-model = [
-    "vllm~=0.8.0",
-    "transformers~=4.52.0"
-]
-
-[[tool.uv.index]]
-name = "tencent"
-url = "https://mirrors.cloud.tencent.com/pypi/simple/"
