--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ authors = [
 ]
 requires-python = "~=3.12"
 dependencies = [
-    "openai<2.0.0",
+    "openai~=1.109.0",
     "tavily~=1.1.0",
 ]
 
@@ -26,4 +26,7 @@ dev = [
 [project.optional-dependencies]
 example = [
     "python-dotenv~=1.0.0",
+]
+rl = [
+    "trl~=0.26.2",
 ]
