build: 添加tensorboard依赖并更新tensorboardx版本
添加tensorboard~=2.20.0到example可选依赖
更新tensorboardx版本为~=2.6.0

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,8 +26,9 @@ dev = [
 [project.optional-dependencies]
 example = [
     "python-dotenv~=1.0.0",
+    "tensorboard~=2.20.0",
 ]
 rl = [
     "trl~=0.26.2",
-    "tensorboardX",
+    "tensorboardX~=2.6.0",
 ]
