--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ requires-python = "~=3.12"
 dependencies = [
     "openai~=1.109.0",
     "tavily~=1.1.0",
+    "tqdm~=4.66.0",
 ]
 
 [build-system]
