docs: 更新README和pyproject.toml文档
在README中添加uv安装说明
将pyproject.toml中的python版本和peft依赖版本固定为精确版本

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ readme = "README.md"
 authors = [
     { name = "linhx", email = "linhx1999@163.com" }
 ]
-requires-python = "~=3.12"
+requires-python = "~=3.12.0"
 dependencies = [
     "openai~=1.109.0",
     "tavily~=1.1.0",
@@ -32,5 +32,5 @@ example = [
 rl = [
     "trl~=0.26.2",
     "tensorboardX~=2.6.0",
-    "peft"
+    "peft~=0.18.0"
 ]
